--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,4 +1,4 @@
-- title @user.adviser? ? "アドバイザー登録" : "サインアップ"
+- title @user.adviser? ? "アドバイザー登録" : "フィヨルドブートキャンプ参加登録"
 - content_for :page_classes, "no-header no-footer no-recent-reports no-global-nav is-auth-page"
 
 .auth-form.is-sign-up.a-card
