--- a/app/views/courses/index.html.slim
+++ b/app/views/courses/index.html.slim
@@ -5,7 +5,7 @@ header.page-header
       h2.page-header__title = title
       .page-header-actions
         ul.page-header-actions__items
-          - if current_user.admin?
+          - if current_user && current_user.admin?
             li.page-header-actions__item
               = link_to new_course_path, class: "is-button-simple-md-warning" do
                 i.fas.fa-plus
