--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -1,5 +1,5 @@
 = render "errors", object: product
-= form_for product  do |f|
+= form_for product, html: { name: "product" }  do |f|
   = hidden_field_tag :practice_id, practice.id
   .form__items
     .form-item
