--- a/app/views/admin/users/_admin_users_table.html.slim
+++ b/app/views/admin/users/_admin_users_table.html.slim
@@ -4,6 +4,7 @@
       tr.admin-table__labels
         th.admin-table__label ステータス
         th.admin-table__label ユーザー名
+        th.admin-table__label 会社
         th.admin-table__label Slack
         th.admin-table__label 最終アクセス日時
         th.admin-table__label 日報
@@ -34,6 +35,8 @@
               span.admin-table__user-login-name
                 = user.login_name
                 | （#{user.full_name}）
+          td.admin-table__item-value.is-text-align-center
+            = user.company.name
           td.admin-table__item-value.is-text-align-center
             - if user.slack_account.present?
               = user.slack_account
