--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for([:admin, category], html: { class: "form" }) do |f|
+= form_for([:admin, category], html: { name: "category", class: "form" }) do |f|
   .form__items
     .form-item
       .row
