--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -1,12 +1,16 @@
+- title "カテゴリー"
+
 header.page-header
   .container
     .page-header__container
-      h1.page-header__title カテゴリー
+      h1.page-header__title = title
       .page-header__action
         = link_to new_admin_category_path, class: "is-button-simple-md-warning" do
           i.fas.fa-plus
           | カテゴリー作成
-= render "admin/admin_page_tabs", active: 2
+
+= render "admin/admin_page_tabs"
+
 .page-body
   .container.is-padding-horizontal-0-sm-down
     .admin-table
@@ -19,7 +23,7 @@ header.page-header
             th.admin-table__label.handle 並び順
         tbody.admin-table__items
           - @categories.each do |category|
-            tr.admin-table__item
+            tr.admin-table__item(id="category_#{category.id}")
               td.admin-table__item-value
                 = category.name
               td.admin-table__item-value
@@ -30,19 +34,22 @@ header.page-header
                     = link_to edit_admin_category_path(category), class: "is-button-simple-sm-primary is-icon" do
                       i.fas.fa-pen
                   li
-                    = link_to [:admin, category], data: { confirm: "本当によろしいですか？" }, method: :delete, class: "is-button-simple-sm-danger is-icon" do
+                    = link_to [:admin, category],
+                      data: { confirm: "本当によろしいですか？" },
+                      method: :delete,
+                      class: "is-button-simple-sm-danger is-icon js-delete" do
                       i.fas.fa-trash-alt
               td.admin-table__item-value.is-text-align-center
                 ul.is-button-group
                   li
-                    = link_to admin_category_position_path(category, move: :top), method: :put, class: "is-button-simple-sm-secondary is-icon"
+                    = link_to admin_category_position_path(category, move: :top), method: :put, class: "is-button-simple-sm-secondary is-icon" do
                       i.fas.fa-angle-double-up
                   li
-                    = link_to admin_category_position_path(category, move: :higher), method: :put, class: "is-button-simple-sm-secondary is-icon"
+                    = link_to admin_category_position_path(category, move: :higher), method: :put, class: "is-button-simple-sm-secondary is-icon" do
                       i.fas.fa-angle-up
                   li
-                    = link_to admin_category_position_path(category, move: :lower), method: :put, class: "is-button-simple-sm-secondary is-icon"
+                    = link_to admin_category_position_path(category, move: :lower), method: :put, class: "is-button-simple-sm-secondary is-icon" do
                       i.fas.fa-angle-down
                   li
-                    = link_to admin_category_position_path(category, move: :bottom), method: :put, class: "is-button-simple-sm-secondary is-icon"
+                    = link_to admin_category_position_path(category, move: :bottom), method: :put, class: "is-button-simple-sm-secondary is-icon" do
                       i.fas.fa-angle-double-down
