--- a/app/views/admin/companies/edit.html.slim
+++ b/app/views/admin/companies/edit.html.slim
@@ -1,4 +1,16 @@
 - title "会社編集"
 
-h1 = title
-= render "form", company: @company
+header.page-header
+  .container
+    .page-header__container
+      h1.page-header__title = title
+      .page-header__action
+        = link_to new_admin_company_path, class: "is-button-simple-md-warning" do
+          i.fas.fa-plus
+          | 会社作成
+
+= render "admin/admin_page_tabs"
+
+.page-body
+  .container
+    = render "form", company: @company
