--- a/app/views/admin/home/index.html.slim
+++ b/app/views/admin/home/index.html.slim
@@ -1,8 +1,12 @@
+- title "管理ページ"
+
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title 管理ページ
-= render "admin/admin_page_tabs", active: 0
+      h2.page-header__title = title
+
+= render "admin/admin_page_tabs"
+
 .page-body
   .container
     ul
