--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,6 +35,6 @@ html.is-application lang="ja"
       main.page
         = yield
     - if current_user && page_classes.exclude?("no-recent-reports") && recent_reports.present?
-      = render "/reports/recent_reports"
+      = render "reports/recent_reports"
     - unless page_classes.include?("welcome")
       = render("to_top")
