--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -9,7 +9,7 @@
         = link_to comment.user, itempro: "url", class: "thread-comment__title-link" do
           = comment.user.login_name
       time.thread-comment__created-at(datetime="#{commentable.created_at.to_datetime}" pubdate="pubdate")
-        = l comment.updated_at, format: :date_long_with_time
+        = l comment.updated_at
     .thread-comments__description.js-markdown-view.js-target-blank.is-long-text-style
       = comment.description
     - if comment.user == current_user
