--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -24,7 +24,7 @@ header.page-header
     section.practice-content.a-card
       header.practice-content__header.card-header
         h2.practice-content__title
-          = t("helpers.label.practice.description")
+          = Practice.human_attribute_name :description
       .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
         = @practice.description
       footer.card-footer
@@ -38,7 +38,7 @@ header.page-header
     section.practice-content.a-card
       header.practice-content__header.card-header
         h2.practice-content__title
-          = t("helpers.label.practice.goal")
+          = Practice.human_attribute_name :goal
       .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
         = @practice.goal
       footer.card-footer
@@ -52,8 +52,7 @@ header.page-header
     - if current_user.admin?
       section.practice-content.a-card
         header.practice-content__header.card-header
-          h2.practice-content__title
-            | 管理者メニュー
+          h2.practice-content__title 管理者メニュー
         footer.card-footer
           .card-footer-actions
             ul.card-footer-actions__items
