--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -10,7 +10,8 @@ header.page-header
     .practice-contents
       .practice-content.a-card
         .card-header
-          h2.practice-content__title = t("helpers.label.practice.goal")
+          h2.practice-content__title
+            = Practice.human_attribute_name :goal
         .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
           = @product.practice.goal
 
