--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -20,7 +20,7 @@ header.page-header
       .thread__inner.a-card
         header.thread-header
           .thread-header__reported-at
-            | #{l @report.reported_on, format: :long} の日報
+            | #{l @report.reported_on} の日報
           h1.thread-header__title(class="#{@report.wip? ? "is-wip" : ""}")
             - if @report.wip?
               span.thread-header__title-icon
@@ -31,7 +31,7 @@ header.page-header
                 h2.stamp__content.is-title
                   | 確認済
                 time.stamp__content.is-created-at
-                  = @checks.last.created_at.strftime("%Y/%m/%d")
+                  = l @checks.last.created_at.to_date, format: :short
                 .stamp__content.is-user-name
                   = @checks.last.user.login_name
           .thread-meta
@@ -39,7 +39,7 @@ header.page-header
               = link_to @report.user, class: "thread-meta__author-name-link" do
                 = @report.user.login_name
             time.thread-meta__created-at(datetime="#{@report.created_at.to_datetime}" pubdate="pubdate")
-              | 書いた日 : #{l @report.updated_at, format: :date_long_with_time}
+              | 書いた日 : #{l @report.updated_at}
         - if @report.practices.present?
           .report-practices
             ul.report-practices__items
