--- a/app/views/users/_dates.html.slim
+++ b/app/views/users/_dates.html.slim
@@ -1,16 +1,16 @@
 .user-dates
   .user-dates__created-at
     .user-dates__created-at-label
-      = t("helpers.label.user.created_at")
+      = User.human_attribute_name :created_at
       | :
     .user-dates__created-at-value
       = l user.created_at.to_date
   .user-dates__update-at
     .user-dates__update-at-label
-      = t("helpers.label.user.updated_at")
+      = User.human_attribute_name :updated_at
       | :
     .user-dates__update-at-value
-      = l user.updated_at, format: :long
+      = l user.updated_at
   .user-dates__update-at
     .user-dates__update-at-label
       | slackアカウント
