--- a/app/views/users/_product.html.slim
+++ b/app/views/users/_product.html.slim
@@ -2,7 +2,7 @@
   = link_to [product.practice, product], itempro: "url", class: "user-reports-item__link" do
     h3.user-reports-item__title(itemprop="name") = product.title
     time.user-reports-item__updated-at(datetime="#{product.updated_at.to_datetime}" pubdate="pubdate")
-      = l product.updated_at, format: :semi_long
+      = l product.updated_at
     - if product.comments.any?
       .user-reports-item__comment-count
         .user-reports-item__comment-count-label
