--- a/app/views/users/_reports.html.slim
+++ b/app/views/users/_reports.html.slim
@@ -5,7 +5,7 @@
         = link_to report, itempro: "url", class: "user-reports-item__link" do
           h3.user-reports-item__title(itemprop="name") = report.title
           time.user-reports-item__updated-at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
-            = l report.updated_at, format: :semi_long
+            = l report.updated_at
           - if report.comments.any?
             .user-reports-item__comment-count
               .user-reports-item__comment-count-label
