--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -28,7 +28,7 @@ $badge-color: #e54724
 
 $primary: #229bcc
 $success: #98c96c
-$info: #289a60
+$info: #4cad7c
 $warning: #fabd17
 $danger: #dc4268
 
