Q&Aのプラクティス選択をラジオボタンからセレクトボックスに変更

--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -9,14 +9,8 @@
             .form-item
               = f.label :practice, class: "a-label"
               .select-practices
-                ul
-                  - categories.each do |category|
-                    - category.practices.each do |practice|
-                      label.select-practices__label
-                        = radio_button_tag "question[practice_id]", practice.id, question.practice == practice, id: "question_practice_ids_#{practice.id}", class: "select-practices__input"
-                        => "[#{category.name}]"
-                        span.select-practices__label-title
-                          = practice.title
+                = f.select(:practice_id, practice_options(categories))
+
       .form-item
         .row.js-markdown-parent
           .col-md-6.col-xs-12
