サインアップ変更に関するデザイン

--- a/app/assets/stylesheets/welcome/_welcome.sass
+++ b/app/assets/stylesheets/welcome/_welcome.sass
@@ -137,8 +137,9 @@ body.home-welcome
   max-width: 22rem
   margin: 2rem auto 0
   background: #f4e90f
+  color: $welcome-default-text
   align-items: center
   justify-content: center
-  border: solid 4px
+  border: solid 4px $welcome-default-text
   border-radius: 8px
   cursor: pointer
