--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -8,7 +8,7 @@
       = f.text_field :login_name, class: "a-sm-text-input", autocomplete: :off, placeholder: "komagata"
       .auth-form-item__help
         p
-          | チャットやSNS（Twitter、GitHub、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
+          | チャットやSNS（Twitter、GitHub、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。サービスによっては半角英数しか使えないサービスが多いので、半角英数をおすすめします。
 
     .auth-form-item
       // メールアドレス
