フォームのエラー表示削除設定の修正

--- a/app/assets/stylesheets/blocks/form/_form-selects.sass
+++ b/app/assets/stylesheets/blocks/form/_form-selects.sass
@@ -21,3 +21,7 @@
       content: ":"
       display: block
       +padding(horizontal, .5rem)
+
+.form-item__times-action
+  #tasks .form-item:first-child &
+    display: none
