--- a/app/assets/stylesheets/blocks/thread/_thread-meta.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-meta.sass
@@ -26,3 +26,8 @@
 .thread-meta__created-at
   display: block
   +text-block(.75rem, $muted-text)
+  margin-right: .75rem
+
+.thread-meta__updated-at
+  display: block
+  +text-block(.75rem, $muted-text)
