--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -2,12 +2,16 @@
   .thread__inner.a-card
     header.thread-header
       h1.thread-header__title
-        | #{link_to product.practice.title, product.practice, class: "thread-header__title-link"}の提出物
+        | #{link_to product.practice.title, product.practice, class: "thread-header__title-link"}の:提出物
       .thread-meta
         .thread-meta__author-name
           = link_to product.user, class: "thread-meta__author-name-link" do
             = product.user.login_name
         time.thread-meta__created-at(datetime="#{product.created_at.to_datetime}" pubdate="pubdate")
+          = l product.created_at
+        .thread-meta__label
+          | 最終更新
+        time.thread-meta__updated-at(datetime="#{product.updated_at.to_datetime}" pubdate="pubdate")
           = l product.updated_at
     - if product.checks.any?
       .stamp.stamp-approve
