page_nav のjsでの動きをスムーズに

--- a/app/assets/stylesheets/blocks/shared/_faces.sass
+++ b/app/assets/stylesheets/blocks/shared/_faces.sass
@@ -1,5 +1,8 @@
 .faces
   background: #525252
+  height: 4.625rem
+  +media-breakpoint-down(sm)
+    display: none
 
 .faces__inner
   +padding(horizontal, 5rem 14rem)
