--- a/app/views/courses/practices/index.html.slim
+++ b/app/views/courses/practices/index.html.slim
@@ -36,8 +36,8 @@ header.page-header
 
       nav.page-nav.js-page-nav
         ul.page-nav__items
-        - @course.categories.order(:position).each do |category|
-          - if category.practices.present?
-            .page-nav__item
-              a.page-nav__item-link(data-scroll href="#category-#{category.id}")
-                = category.name
+          - @course.categories.order(:position).each do |category|
+            - if category.practices.present?
+              li.page-nav__item
+                a.page-nav__item-link(data-scroll href="#category-#{category.id}")
+                  = category.name
