--- a/app/assets/stylesheets/blocks/shared/_page-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_page-nav.sass
@@ -8,8 +8,14 @@
   transition: opacity .2s ease-in
   &:hover
     opacity: 1
+  &.is-sticky
+    +fixed(top 0)
   +media-breakpoint-down(sm)
     display: none
+
+.page-nav__items
+  max-height: calc(100vh - .25rem)
+  overflow-y: auto
 
 .page-nav__item
   border-bottom: solid 1px #e6e6e6
