プラクティス一覧ページのデザイン微調整

--- a/app/assets/stylesheets/blocks/shared/_faces.sass
+++ b/app/assets/stylesheets/blocks/shared/_faces.sass
@@ -1,5 +1,5 @@
 .faces
-  background: #525252
+  background: $welcome-default-text
   height: 4.625rem
   +media-breakpoint-down(sm)
     display: none
