--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -6,6 +6,7 @@ $background-color: #e6e6e6
 $background-color-shade: #cbcbcb
 
 $default-text: #35343c
+$welcome-default-text: #5a5f60
 $reversal-text: white
 $muted-text: #9da4a7
 
