--- a/app/assets/stylesheets/blocks/practice/_categories.sass
+++ b/app/assets/stylesheets/blocks/practice/_categories.sass
@@ -13,6 +13,8 @@
 
 .categories-item
   margin-bottom: 3rem
+  +media-breakpoint-down(sm)
+    margin-bottom: 2rem
 
 .categories-item__title
   +text-block(1.5rem 1.45, $side)
