--- a/app/assets/stylesheets/blocks/practice/_category-practices-item.sass
+++ b/app/assets/stylesheets/blocks/practice/_category-practices-item.sass
@@ -8,33 +8,27 @@
     background-color: #fafafa
   +media-breakpoint-down(sm)
     flex-wrap: wrap
-    padding: .5rem .75rem
+    padding: .5rem .75rem .75rem
 
-.category-practices-item__inner
-  +position(relative)
+.category-practices-item__header
+  display: flex
+  +media-breakpoint-down(sm)
+    display: block
 
-.category-practices-item__value
-  &.is-title
-    +media-breakpoint-down(sm)
-      flex: auto
-      width: 100%
-      margin-bottom: .5rem
-  &.is-started-users
-    padding-top: .5rem
-    margin-top: .75rem
-    border-top: dotted 1px #e6e6e6
-    margin-bottom: -.25rem
-    +media-breakpoint-down(sm)
-      flex: auto
-      width: 100%
-      margin-bottom: .5rem
-  &.is-status
-    text-align: center
-    +position(absolute, right 0, top 0)
-    +media-breakpoint-down(sm)
-      flex: auto
-      width: 100%
-      position: static
+.category-practices-item__title
+  flex: 100
+  margin-right: .5rem
+  +media-breakpoint-down(sm)
+    margin-right: 0
+    margin-bottom: .25rem
+
+.category-practices-item__title-link
+  +text-block(.875rem 1.5, $default-text flex)
+  +hover-link
+  align-items: center
+  min-height: 1.875rem
+  +media-breakpoint-down(sm)
+    font-size: .8125rem
 
 .category-practices-item__handle
   +position(absolute, right 0, top 0)
@@ -47,33 +41,3 @@
     display: flex
     justify-content: center
     align-items: center
-
-.category-practices-item__title-link
-  +text-block(.875rem 1.55, $default-text flex)
-  +hover-link
-  padding-right: 11.25rem
-  align-items: center
-  min-height: 1.875rem
-  +media-breakpoint-down(sm)
-    padding-right: 0
-.category-practices-item__user-icon
-  border-radius: 50%
-  +size(2rem)
-  +media-breakpoint-down(sm)
-    margin-right: .5rem
-    +size(1.5rem)
-
-.category-practices-item__button-group
-  white-space: nowrap
-
-.category-practices-item__button:disabled
-  color: $reversal-text
-  pointer-events: none
-
-.category-practices-item__button
-  &:active
-    +top(0)
-  .category-practices-item__button-group-item.is-active &
-    border: none
-  .category-practices-item__button-group-item.is-active + .category-practices-item__button-group-item &
-    border-left: none
