--- a/app/assets/stylesheets/blocks/report/_completed-users.sass
+++ b/app/assets/stylesheets/blocks/report/_completed-users.sass
@@ -2,6 +2,7 @@
   display: flex
   list-style: none
   flex-wrap: wrap
+  margin-top: .75rem
   +margin(horizontal, -.25rem)
 
 .completed-users__user-icon
