--- a/app/views/practices/_practice.html.slim
+++ b/app/views/practices/_practice.html.slim
@@ -1,26 +1,28 @@
 .category-practices-item.js-practice(id="practice_#{practice.id}")
-  .category-practices-item__inner
-    .category-practices-item__value.is-title
+  header.category-practices-item__header
+    .category-practices-item__title
       = link_to practice, class: "category-practices-item__title-link"
         = practice.title
-      - if practice.started_users.student.exists?
-        .category-practices-item__value.is-started-users
-          - practice.started_users.student.each do |user|
-            = link_to user, class: "category-practices-item__user-link" do
-              = gravatar_tag user, secure: true, size: 44, html: { class: "category-practices-item__user-icon #{user.active? ? "active" : "inactive"}" }
     - if current_user
-      .category-practices-item__value.is-status
+      .practice-status
         - status = practice.status(current_user)
-        ul.is-button-group.category-practices-item__button-group
+        ul.is-button-group.practice-status__buttons
           - %i(not_complete started complete).each do |status|
             - if practice.status(current_user) == status
-              li.category-practices-item__button-group-item.is-active
-                button.category-practices-item__button.js-practice-state.is-button-simple-xs-primary(class="#{status}" data-status="#{status}" disabled)
+              li.practice-status__buttons-item.is-active
+                button.practice-status__button.js-practice-state.is-button-simple-xs-primary(class="#{status}" data-status="#{status}" disabled)
                   = t("activerecord.enums.learning.status.#{status}")
             - else
-              li.category-practices-item__button-group-item
-                button.category-practices-item__button.js-practice-state.is-button-simple-xs-secondary(class="#{status}" data-status="#{status}")
+              li.practice-status__buttons-item
+                button.practice-status__button.js-practice-state.is-button-simple-xs-secondary(class="#{status}" data-status="#{status}")
                   = t("activerecord.enums.learning.status.#{status}")
+  - if practice.started_users.student.exists?
+    .practice-started-users
+      .practice-started-users__items
+        - practice.started_users.student.each do |user|
+          .practice-started-users__item
+            = link_to user, class: "practice-started-users__item-link" do
+              = gravatar_tag user, secure: true, size: 44, html: { class: "practice-started-users__item-icon #{user.active? ? "active" : "inactive"}" }
   - if current_user.admin?
     .category-practices-item__handle.js-show-handle__target
       ul.is-button-group
