ユーザー個別ページのデザインを修正

--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -18,4 +18,4 @@
             ul.card-footer-actions__items
               .card-footer-actions__item
                 = link_to edit_admin_user_path(user), class: "card-footer-actions__action is-button-simple-xs-secondary" do
-                  | 管理者として情報変更
+                  | 管理者として変更
