--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -16,7 +16,7 @@ header.page-header
         .user-data__main
           = render "users/profile", user: @user
         .user-data__sub
-          = render "users/dates", user: @user
+          = render "users/metas", user: @user
         .user-data__description
           = simple_format @user.description
 
